🐛 fix 'cramped' preview bullet lists

--- a/obsidian.css
+++ b/obsidian.css
@@ -964,46 +964,60 @@ ul {
   list-style-type: disc;
 }
 ul ul {
+  padding-left: 1.3em;
   list-style-type: circle;
 }
 ul ul ul {
+  padding-left: 1.3em;
   list-style-type: "–  ";
 }
 ul ul ul ul {
-  list-style-type: "▪  ";
+  padding-left: 1.3em;
+  list-style-type: "▪ ";
 }
 ul ul ul ul ul {
-  list-style-type: "◽  ";
+  padding-left: 1.3em;
+  list-style-type: "◽ ";
 }
 ul ul ul ul ul ul {
+  padding-left: 1.3em;
   list-style-type: disc;
 }
 ul ul ul ul ul ul ul {
+  padding-left: 1.3em;
   list-style-type: circle;
 }
 ul ul ul ul ul ul ul ul {
+  padding-left: 1.3em;
   list-style-type: "–  ";
 }
 ul ul ul ul ul ul ul ul ul {
-  list-style-type: "▪  ";
+  padding-left: 1.3em;
+  list-style-type: "▪ ";
 }
 ul ul ul ul ul ul ul ul ul ul {
-  list-style-type: "◽  ";
+  padding-left: 1.3em;
+  list-style-type: "◽ ";
 }
 ul ul ul ul ul ul ul ul ul ul ul {
+  padding-left: 1.3em;
   list-style-type: disc;
 }
 ul ul ul ul ul ul ul ul ul ul ul ul {
+  padding-left: 1.3em;
   list-style-type: circle;
 }
 ul ul ul ul ul ul ul ul ul ul ul ul ul {
-  list-style-type: "-  ";
+  padding-left: 1.3em;
+  list-style-type: "–  ";
 }
 ul ul ul ul ul ul ul ul ul ul ul ul ul ul {
-  list-style-type: "▪  ";
+  padding-left: 1.3em;
+  list-style-type: "▪ ";
 }
 ul ul ul ul ul ul ul ul ul ul ul ul ul ul ul {
-  list-style-type: "◽  ";
+  padding-left: 1.3em;
+  list-style-type: "◽ ";
 }
 
 /* ordered lists */
